# LLM-Finetuning

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
advanced_topics/4bit_normal_float/: index.html
advanced_topics/bitsandbytes/: index.html
advanced_topics/blockwise_kbit_quantization/: index.html
advanced_topics/bp16/: index.html
advanced_topics/paged_optimizers/: index.html
distributed_training/distributed_training_systems/: index.html
distributed_training/fsdp_deepspeed/: index.html
docs/: index.md  lora.md  references.md
docs/advanced_topics/: accelerate.md  blockwise_kbit_quantization.md  paged_optimizers.md
docs/distributed_training/: fsdp_deepspeed.md
docs/finetuning_techniques/: lora.md  prefix_tuning.md  qlora.md
docs/optimization/: memory_considerations.md  training_optimization_and_stability.md
docs/parameter_efficient_fine_tuning/: adaptors.md  qlora.md
docs/phases/: pre_training.md  system2.md
docs/supporting_topics/: 4bit_normal_float.md  accelerate.md  bp16.md  kv_caching.md  paged_adam.md  speculative_decoding.md  vllm.md
docs/training_techniques/: distributed_training_systems.md  foundation.md  thinking_llms.md
finetuning_techniques/lora/: index.html
finetuning_techniques/prefix_tuning/: index.html
finetuning_techniques/qlora/: index.html
frameworks/accelerate/: index.html
full_finetuning/: config.yaml  main.py
lora/: config.yaml  index.html  main.py
lora_finetuning/: lora_vanilla.py
phases/sft/: index.html
references/: index.html
search/: search_index.json
utils/: utils.py
(+52 files in other folders)
