[project]
name = "personal-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = "^3.11"

# Core ML / AI
torch = "2.2.2"
transformers = "4.52.4"
datasets = "3.6.0"
openai = "1.86.0"

# Data / Utilities
numpy = "1.26.4"
pandas = "2.2.0"
pyarrow = "20.0.0"
pydantic = "2.10.6"
pydantic_core = "2.27.2"
attrs = "24.2.0"
typing_extensions = "4.14.0"
pyyaml = "6.0.1"
scipy = "^1.12.1"
tqdm = "4.67.1"

# HTTP / Async
aiohttp = "3.12.12"
httpx = "0.27.2"
requests = "2.32.2"

# Visualization / Plotting
matplotlib = "3.9.0"
seaborn = "^0.12.2" # optional

# Documentation
mkdocs = ">=1.6.1"
mkdocs-material = ">=9.6.22"
